--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,5 +1,9 @@
 .list {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.listItem {
+    margin-bottom: 10px;
 }
